fixes css spacing issue

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,22 +1,22 @@
 .welcome-background {
-	width: 100%;
-	height: 100vh;
-	font-family: "Exo", sans-serif;
-	background: linear-gradient(-45deg, #537895, #09203f, #1CB5E0, #09203f);
+  width: 100%;
+  height: 100vh;
+  font-family: 'Exo', sans-serif;
+  background: linear-gradient(-45deg, #537895, #09203f, #1cb5e0, #09203f);
   background-size: 400% 400%;
   animation: gradientBG 15s ease infinite;
 }
 
 @keyframes gradientBG {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .welcome {
